[package]
name = "aoc20"
version = "0.1.0"
authors = ["betseg <betulunlu0018@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
scan_fmt = "0.2.5"
itertools = "0.10.0"
peg = "0.6.3"
